# reedition

./: Cargo.toml  LICENSE  README.md
edition/: Cargo.toml
edition/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
reedition/: Cargo.toml
reedition/src/: lib.rs
rust-2015/: Cargo.toml
rust-2015/src/: lib.rs
rust-2018/: Cargo.toml
rust-2018/src/: lib.rs
rust-2021/: Cargo.toml  README.md
rust-2021/src/: lib.rs
rust-2024/: Cargo.toml
rust-2024/src/: lib.rs
